feat: add password change, rbac guards (#20) - add password change API - add RBAC guard
